# containerized-data-importer

api/openapi-spec/: swagger.json
doc/: storageprofile.md
hack/: verify-codegen.sh
pkg/apis/core/v1alpha1/: openapi_generated.go  types.go  zz_generated.deepcopy.go
pkg/controller/: BUILD.bazel  clone-controller.go  config-controller.go  datavolume-controller.go  datavolume-controller_test.go  feature-gates.go  import-controller.go  import-controller_test.go  upload-controller.go  upload-controller_test.go  util.go  util_test.go
pkg/storageclass/: BUILD.bazel  sc-analyzer.go  sc-analyzer_suite_test.go  sc-analyzer_test.go  sc-capabilities.go  sc-capabilities_test.go
tests/: cloner_test.go  datavolume_test.go  import_test.go  operator_test.go  rbac_test.go  smartclone_test.go  transport_test.go  upload_test.go
tests/framework/: BUILD.bazel  framework.go  pvc.go
tests/utils/: common.go
