load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["sc-analyzer.go"],
    importpath = "kubevirt.io/containerized-data-importer/pkg/storageclass",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["sc-analyzer_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
